2005-07-24    <mutoh@localhost.localdomain>

	* extconf.rb, src/rbpangoattriterator.: Fix to work on pango-1.1.x.

2005-07-23  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbpangocoverage.c: Fix a compiling warning. 

2005-04-15  Pascal Terjan <pterjan@linuxfr.org>

	* src/rbpangolayoutline.c: Fixed a warning of Pango::LayoutLine#set_runs. 

2005-03-22  Mirko Maischberger  <mirko@lilik.it>
	
	* sample/parse.rb: sh-bang (!#) normalization.
	Reported by Mezz 

2005-03-06  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbpangoglyphitem.c, src/rbpangocontext.c, rbpangofontfamily.c, 
	rbpangoattrlist.c: Fix compiling errors on pango-1.1.x.
	* extconf.rb, src/rbpangoglyphitem.c, rbpangomain.c, 
	rbpangologattr.c, rbpangolayoutline.c, rbpangolayoutiter.c, 
	rbpangolayout.c, rbpangoanalysis.c, rbpangoattribute.c: 
	Fix compiling errors on pango-1.2.x.
	* README: Revised.

2005-02-17  Masao Mutoh  <mutoh@highway.ne.jp>

	* extconf.rb, src/rbpangoattribute.c:  Fix a compiling problem on 
	MSVC++/pango-1.8.0.

2005-02-15  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbpangolayoutline.c: Added Pango::LayoutLine#extents, #pixel_extents
	#get_x_ranges. Added the accessors.
	* src/rbpangolayoutiter.c: Added Pango::LayoutIter#line, #char_extents,
	#cluster_extents, #run_extents, #line_extents, #layout_extents
	#run.
	* src/rbpangoglyphitem.c: Added. 
	* src/rbpangoglyphinfo.c: Fix a bug of Pango::GlyphInfo#set_glyph. 
	* src/rbpangotabarray.c: Added a comment. 

2005-02-13  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbpangolayout.c: Added Pango::Layout#log_attrs.
	* src/rbpangorectangle.c: Added Pango::Rectangle#ascent, #descent, 
	#lbearing, #rbearing.
	* src/rbpangoattriterator.c: Added Pango::AttrIterator#attrs. 
	* src/rbpangoattrlist.c: Added Pango::AttrList#filter.
	* src/rbpangofontset.c: Added Pango::FontSet#each for Pango-1.4. 
	* src/rbpangofontmap.c: Rename Pango::FontMap#list_families to
	#families. Added #shape_engine_type. Added Pango::FcFontMap, XftFontMap.